@@ -16,6 +16,8 @@ Changes in openair 0.7-0 [2012-05-30]
 *	Allow categorical scales in calendarPlot
 *	Allow two met data sets to be compared in pollutionRose
 *	Allow statistic = "percentile" to be used with polarPlot
+*	Allow 'method' to be passed to cor in corPlot
+*	Added more back trajectory locations.
 
 
 Changes in openair 0.6-0 [2012-04-10]
